Add tests for selecting Drive files while offline.

The file manager integration tests currently have no coverage for
offline Drive. Add tests to ensure the file chooser dialog allows the
selection of Drive files that are available offline while offline.

These tests only run with DriveFS enabled due to the lack of controls
available to set up the test scenarios with the existing Drive sync
client.

Bug: 876973
Change-Id: I81e39fba868a073fd82a457004700bb0ebb566ec
Reviewed-on: https://chromium-review.googlesource.com/1189515
Commit-Queue: Sam McNally <sammc@chromium.org>
Reviewed-by: Noel Gordon <noel@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586208}
Former-commit-id: 5082949478bb77009d6f48f83bb498a1b7764133