chrome/browser/chromeos/file_manager/file_manager_browsertest_base.h
@@ -46,6 +46,7 @@ class FileManagerBrowserTestBase : public extensions::ExtensionApiTest {
   virtual bool GetEnableDriveFs() const;
   virtual bool GetRequiresStartupBrowser() const;
   virtual bool GetNeedsZipSupport() const;
+  virtual bool GetIsOffline() const;
 
   // Launches the test extension from GetTestExtensionManifestName() and uses
   // it to drive the testing the actual FileManager component extension under
@@ -64,6 +65,9 @@ class FileManagerBrowserTestBase : public extensions::ExtensionApiTest {
 
   // Returns true if the test requires zip/unzip support.
   bool IsZipTest() const { return GetNeedsZipSupport(); }
+
+  // Returns true if Drive should act as if offline.
+  bool IsOfflineTest() const { return GetIsOffline(); }
 
   // Launches the test extension with manifest |manifest_name|. The extension
   // manifest_name file should reside in the specified |path| relative to the
