chromeos/components/drivefs/fake_drivefs.h
@@ -32,7 +32,8 @@ class FakeDriveFs : public drivefs::mojom::DriveFs,
 
   void SetMetadata(const base::FilePath& path,
                    const std::string& mime_type,
-                   const std::string& original_name);
+                   const std::string& original_name,
+                   bool pinned);
 
   const base::FilePath& mount_path() { return mount_path_; }
 
